--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     height: 5rem;
     width: 100vw;
-    max-width: 75rem;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 1rem 2rem;
     display: flex;
@@ -10,6 +10,7 @@
     position: sticky;
     top: 0;
     z-index: 3;
+    background: rgb(236, 231, 215);
 }
 
 .logo {
@@ -24,9 +25,9 @@
 }
 
 .desktopMenuListItem:hover {
-    color: rgb(3, 73, 73);
+    color: rgb(5, 117, 117);
     padding-bottom: 0.5rem;
-    border-bottom: 3px solid rgb(3, 73, 73);
+    border-bottom: 3px solid rgb(5, 117, 117);
 }
 
 .desktopMenuBtn {
@@ -42,8 +43,8 @@
 
 .desktopMenuImg {
     object-fit: cover;
-    height: 1rem;
-    width: 1rem;
-    margin: 1rem;
+    height: 2rem;
+    width: 2rem;
+    margin: 0.5rem 1rem 0.5rem 0.5rem;
 
 }
