--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,6 +22,8 @@
 .desktopMenuListItem {
     margin: 1rem;
     cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
 }
 
 .desktopMenuListItem:hover {
@@ -39,6 +41,8 @@
     justify-content: center;
     padding: 0 1rem;
     border-radius: 2rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
 }
 
 .desktopMenuImg {
