--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -11,6 +11,7 @@
     top: 0;
     z-index: 3;
     background: rgb(236, 231, 215);
+    border-bottom: 1px solid black;
 }
 
 .logo {
@@ -43,6 +44,7 @@
     border-radius: 2rem;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
+    cursor: pointer;
 }
 
 .desktopMenuImg {
@@ -51,4 +53,9 @@
     width: 2rem;
     margin: 0.5rem 1rem 0.5rem 0.5rem;
 
+}
+
+.desktopMenuBtn:hover {
+    background: rgb(5, 117, 117);
+    color: white;
 }
