--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -15,7 +15,7 @@
     top: 40%;
     left: 20%;
     color: beige;
-    font-size: xx-large;
+    font-size: 38px;
     font-family: 'Courier New', Courier, monospace;
     /*white-space: nowrap;
     /* Empêche le texte de passer à la ligne */
@@ -63,7 +63,7 @@
 
 .socialIcons {
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 20%;
 }
 
