--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,8 @@
+.portfolio {
+    display: flex;
+    flex-direction: column;
+}
+
 .portfolio-intro-text {
     display: flex;
     justify-content: center;
@@ -17,8 +22,8 @@
 
 .portfolio-card {
     position: relative;
-    width: 400px;
-    height: 400px;
+    width: 25rem;
+    height: 25rem;
     overflow: hidden;
     cursor: pointer;
     transition: transform 0.3s;
