--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px;
+    margin: 5rem 5rem 10rem 5rem;
 }
 
 .skill-text {
