--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -75,6 +75,12 @@
     font-size: medium;
 }
 
+.customBtn:hover {
+    background-color: rgb(236, 231, 215);
+    color: black;
+    transition: slidebg 5s linear infinite;
+}
+
 
 
 .fa-brands {
