--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 5rem;
 }
 
 .aboutPic {
@@ -17,10 +18,12 @@
 
 .aboutTextContainer {
     max-width: 60%;
+    display: flex;
+    flex-direction: column;
 }
 
 .aboutText {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     text-align: center;
     line-height: 1.5;
     font-size: x-large;
