--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -16,7 +16,7 @@
 }
 
 .contact-form {
-    margin: 1rem;
+    margin: 1rem 1rem 5rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,6 +37,7 @@
     border-radius: 0.5rem;
     border: none;
 }
+
 
 .submit-button {
     background: rgb(5, 117, 117);
