style landing change

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -15,6 +15,12 @@
     height: 200px;
 }
 
+.about-text {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
+    margin: 1rem 0 3rem 0;
+}
+
 
 .aboutTextContainer {
     max-width: 60%;
