--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -9,6 +9,15 @@
     display: inline-block;
 }
 
+.landing-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 60%;
+    left: 20%;
+}
+
 
 .landingText {
     position: absolute;
@@ -68,9 +77,7 @@
     color: white;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top: 62%;
-    left: 19%;
+
     font-weight: 500;
     font-size: medium;
 }
@@ -83,7 +90,7 @@
 
 .fa-brands {
     width: 5rem;
-    font-size: 6rem;
+    font-size: 4rem;
     background: rgb(5, 117, 117);
     padding: 4px;
     border-radius: 50%;
@@ -93,18 +100,6 @@
     align-items: center;
     display: flex;
     justify-content: center;
-}
-
-.fa-github {
-    position: absolute;
-    top: 62%;
-    left: 38%;
-}
-
-.fa-linkedin-in {
-    position: absolute;
-    top: 62%;
-    left: 47%;
 }
 
 .landing-content-box {
