--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -11,8 +11,9 @@
     display: flex;
     justify-content: center;
     margin: 5rem 0 2rem 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif;
     font-size: xx-large;
+
 }
 
 .contact-form {
@@ -29,7 +30,7 @@
 .name,
 .email,
 .msg {
-    font-size: medium;
+    font-size: large;
     width: 100%;
     max-width: 40rem;
     margin: 0.5rem;
@@ -48,4 +49,5 @@
     color: white;
     border: none;
     cursor: pointer;
+    font-size: large;
 }
