--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,7 +22,8 @@
 .desktopMenuListItem {
     margin: 1rem;
     cursor: pointer;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif;
+    ;
     font-size: large;
 }
 
@@ -41,7 +42,8 @@
     justify-content: center;
     padding: 0 1rem;
     border-radius: 2rem;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif;
+    ;
     font-size: large;
     cursor: pointer;
 }
