--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -131,17 +131,37 @@
         text-align: center;
     }
 
+    .landing-links {
+        flex-direction: column;
+        top: 55%;
+    }
+
     .customBtn {
-        top: 70%;
-        left: 45%;
-        transform: translateX(-50%);
-        text-align: center;
+        margin-left: 0;
+        position: absolute;
+        left: 2rem;
         background-color: rgb(236, 231, 215);
         /* Change the button background color */
         color: rgb(5, 117, 117);
     }
 
     .fa-brands {
-        margin: 0 0.5rem;
+        margin: 0 0 1rem 0;
+    }
+
+    .fa-github {
+        position: absolute;
+        top: 7rem;
+        left: 6rem;
+    }
+
+    .fa-linkedin-in {
+        position: absolute;
+        top: 13rem;
+        left: 6rem;
+    }
+
+    .fa-brands:hover {
+        color: #fff;
     }
 }
