--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 
 body {
     background: rgb(236, 231, 215);
-    overflow: hidden;
+    overflow-x: hidden;
     overflow-y: scroll;
     margin: 0;
 }
