--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,12 @@
 .footer {
     width: 100vw;
     height: 4rem;
-    background: rgb(5, 117, 117);
+    background: rgb(33, 39, 130);
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 300;
     font-size: small;
     font-family: 'Roboto', sans-serif;
-
+    color: rgb(236, 231, 215);
 }
