--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -51,7 +51,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(33, 39, 130);
+    background-color: rgb(33, 39, 130, 0.9);
     padding: 10px;
     color: white;
     opacity: 0;
@@ -89,7 +89,7 @@
 }
 
 .logo-portfolio-mobile {
-    display: nne;
+    display: none;
 }
 
 @media (max-width:768px) {
@@ -108,11 +108,11 @@
 
     .logo-portfolio-mobile {
         display: block;
-        width: 26%;
+        width: 17%;
         position: absolute;
-        top: 0%;
-        right: 0;
+        top: 1%;
+        right: 1%;
         border-radius: 18%;
-        border: 2px solid cornsilk;
+        border: 2px solid black;
     }
 }
